[tool.poetry]
name = "rationai-receiver-auth"
version = "0.1"
description = ""
authors = ["Jiří Horák <horakj@mail.muni.cz> (underlying implementation Christoph Jansen)"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = "^2.2.0"
aiohttp = "^3.7.4"
requests = "^2.26.0"
cryptography = "^42.0.0"

[tool.poetry.dev-dependencies]
black = "^21.5b2"
pylint = "^2.8.3"
pycodestyle = "^2.7.0"
isort = "^5.8.0"
fastapi = "^0.70.0"

[tool.black]
line-length = 120

[tool.pylint."MASTER"]
ignored-modules = ["pydantic"]

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120
disable = "R,C,W0703"

[tool.isort]
line_length = 120
profile = "black"
multi_line_output = 3
include_trailing_comma = true
